# OpenBolo

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md
.gitlab/issue_templates/: Bug.md  Feature.md
client/: CMakeLists.txt  enet_transport.c  frontend_raylib.c  game_loop.c  game_loop.h  main.c  preferences_stub.c  render_bridge.c  render_bridge.h  win32stubs.c
docs/: MANUAL.md
include/: brain.h  network.h  servernet.h  winbolo_platform.h
server/: CMakeLists.txt
server/win32/: preferences_stub.c
src/bolo/: backend.h  network.c  network.h  screen.c  tank.c
src/gui/: dnsLookups.h
src/gui/linux/: back.xpm  background.xph  boloicon.xpm  framemutex.h  smalllogo.xpm  tiles.xph
src/winbolonet/: winbolonetevents.c  winbolonetevents.h
